--- a/packages/.gitignore
+++ b/packages/.gitignore
@@ -15,3 +15,12 @@ iron-router-progress
 /semantic-ui
 /collection2
 /simple-schema
+/semantic-ui
+/collection2
+/simple-schema
+/semantic-ui
+/collection2
+/scss
+/blaze-layout
+/simple-schema
+/bourbon
